--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 #navbarlogo {
-	width: 35px;
+	width: 50px;
 	height: auto;
 }
 
@@ -113,12 +113,12 @@ th {
 .addWrapper {
 	padding-top: 90px;
 	padding-bottom: 170px;
-	background: url("../images/grey.jpg") no-repeat center center fixed; 	
+	background: url("../images/green.jpeg") no-repeat center center fixed; 	
 	opacity: .8;
 }
 
 .showName {
-	color: #eb9316;
+	color: green;
 	text-align: left;
 	padding: 0;
 	margin: 0;
@@ -128,12 +128,12 @@ th {
 }
 
 .showNameInventory, .headerInventory {
-	color: #eb9316;
+	color: green;
 }
 
 /* FOOTER STYLES */
 footer {
-	background: rgba(207, 200, 200, .6) url("../images/grey.jpg") no-repeat center center fixed;
+	background: rgba(207, 200, 200, .6) url("../images/green.jpeg") no-repeat center center fixed;
 	color: #696969;
 	font-size: 12px;
 	line-height: 2;
@@ -167,15 +167,16 @@ footer a:hover {
 }
 
 td.details-control {
-    background: url('../images/expand-button.png') no-repeat center center;
-	background-size: 12px;
-	width: 40px;
+    background: url('../images/expand-arrow2.png') no-repeat center center;
+	background-size: 20px;
+	width: 30px;
 }
 
 tr.shown td.details-control {
-    background: url('../images/expand-arrow.png') no-repeat center center;
-	background-size: 12px;
-	width: 40px;
+	background: url('../images/expand-arrow2.png') no-repeat center center;
+	transform: rotate(180deg);
+	background-size: 20px;
+	width: 30px;
 }
 
 .subsection {
