--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,11 @@ html {
 	position: relative;
 }
 
+h1 {
+	font-family: 'Acme', sans-serif;
+	font-size: 350%;
+}
+
 .genContainer {
 	height: auto;
 	position: relative;
@@ -40,9 +45,9 @@ html {
 	width: 100%;
  	height: 65px;
  	line-height: 65px;
-	font-family: 'Fjalla One', sans-serif;
+	font-family: 'Kavivanar', cursive;
 	font-size: 22px;
-	background: rgba(169,169,169, .3);
+	background: mediumseagreen;
 	color: #E3E1DC;
 }
 
@@ -68,12 +73,12 @@ html {
 
 /*TABLE STYLING*/
 #table-container {
-	padding-top: 90px;
+	padding-top: 5%;
 	padding-bottom: 170px;
 }
 
 #inventory {
-	min-height: 250px;
+	
 	border: 5px #EBEBEC solid;
 }
 #inventory thead, tfoot {
@@ -146,7 +151,6 @@ footer {
 }
 
 footer a {
-	color: rgb(169,169,169);
 	font-size: 24px;
 }
 
@@ -202,4 +206,9 @@ tr.shown td.details-control {
 .fa-github:before {
 	font-size: 50px;
 	color: green;
+}
+
+.fa-github-square {
+	color: green;
+	font-size: 200%;
 }
