Going to fix loading page and menu page styling :dash:

--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -277,6 +277,14 @@ tr.shown td.details-control {
 	margin-top: -.5%;
 }
 
+#slogan {
+	font-family: 'Kavivanar', cursive;
+}
+
+#headerlogo {
+	width: 10%;
+}
+
 
 
 /* MEDIA QUERIES*/
