--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -276,3 +276,33 @@ tr.shown td.details-control {
 #interestLevelLabel {
 	margin-top: -.5%;
 }
+
+.radios {
+	margin-left: 35px !important;
+}
+
+#status_Inactive {
+	margin-left: 40px;
+}
+
+.columnCenter, .sorting_1 {
+	text-align: center;
+}
+
+@media (min-width: 768px) {}
+	#containerTable {
+    	width: 100%;
+		margin: 0;
+	}
+
+	.showNameJobs, .headerJobs {
+		font-size: 35px;
+	}
+
+	.radios {
+		margin-left: 12px !important;
+	}
+
+	
+
+}
