--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -289,6 +289,28 @@ tr.shown td.details-control {
 	text-align: center;
 }
 
+.icons {
+	padding: 0 !important;
+	font-size: 25px;
+}
+
+#updateMe {
+	font-size: 230%;
+}
+
+#responseMe {
+	font-size: 230%;
+	margin-left: 30%;
+}
+
+#menuWord {
+	font-size: 45px;
+    margin-left: 1%;
+}
+
+
+
+
 @media (min-width: 768px) {}
 	#containerTable {
     	width: 100%;
