--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -68,7 +68,7 @@ h1 {
 
 #menudropdown {
 	float: right;
-	margin-right: 17%;
+	margin-right: 12%;
 }
 
 /*TABLE STYLING*/
@@ -285,7 +285,7 @@ tr.shown td.details-control {
 	margin-left: 40px;
 }
 
-.columnCenter, .sorting_1 {
+.columnCenter {
 	text-align: center;
 }
 
@@ -305,13 +305,42 @@ tr.shown td.details-control {
 
 #menuWord {
 	font-size: 45px;
-    margin-left: 1%;
+    margin-left: 5%;
+}
+
+#jobs_filter, .pagination {
+	float: right;
+}
+
+.buttons-html5 {
+	border-right: 2px solid #ddd;
+}
+
+.dt-button-collection {
+	display: grid;
+}
+
+.buttons-colvis, .dt-button-collection {
+	border-right: 2px solid #ddd;
+	margin-left: 250px !important;
+}
+
+.buttons-print {
+	border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
+}
+
+.buttons-colvis {
+	border-top-left-radius: 4px !important;
+    border-bottom-left-radius: 4px !important;
+}
+
+.buttons-columnVisibility {
+	margin-left: 10px !important;
 }
 
 
-
-
-@media (min-width: 768px) {}
+@media (min-width: 960px) {}
 	#containerTable {
     	width: 100%;
 		margin: 0;
