changed how time was shown :giraffe:

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -343,6 +343,11 @@ tr.shown td.details-control {
 	float: right;
 }
 
+.intLev {
+	margin-left: 30%;
+}
+
+
 
 @media (max-width: 960px) {
 	#containerTable {
