--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -342,7 +342,8 @@ tr.shown td.details-control {
 
 
 /* MEDIA QUERIES*/
-@media screen and (max-width: 960px) {
+
+@media only screen and (max-width : 992px) {
 	#headerlogo, #headerlogo2 {
 		width: 15%;
 	}
@@ -352,7 +353,8 @@ tr.shown td.details-control {
 	}
 
 	.login {
-		height: 150px;
+		height: 100px;
+		font-size: 300%;
 	}
 
 	#headerlogo {
