--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -356,7 +356,7 @@ tr.shown td.details-control {
 
 
 /* MEDIA QUERIES*/
-@media (max-width: 960px) {
+@media only screen and (max-width : 992px) {
 	#containerTable {
     	width: 100%;
 		margin: 0;
