working on mobile responsiveness :pig:

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -397,5 +397,9 @@ tr.shown td.details-control {
 		margin-left: -100% !important;
 	}
 	
-	
+	.showNameJobs, .headerJobs {
+		font-size: 125%;
+		margin-top: 12%;
+	}
+
 }
