Fixed styling for login buttons :horse:

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -70,14 +70,18 @@ h1 {
     font-size: 110%;
 }
 
-#signinbutton, #signupbutton, .closeButton, #submitButton {
-    width: 25%;
-    font-size: 150%;
+ .buttonStuff {
+    font-size: 125%;
 }
 
 #errors {
     font-size: 150%;
     color: red;
+}
+
+#resetPW {
+    float: left;
+    font-size: 125%;
 }
 
 
