--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -99,6 +99,11 @@ h1 {
         font-size: 300%;
     }
 
+    #headerlogo {
+        width: 25%;
+        margin-top: -10%;
+    }
+
     #logintoacct, #signintoacct {
         width: 50%;
     }
