--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -46,7 +46,7 @@ h1 {
 	margin-top: 10%;
 }
 
-#logintoacct, #signintoacct {
+.mainButtons {
 	font-size: 150%;
 	width: 30%;
 	margin-bottom: 1%;
@@ -108,6 +108,11 @@ h1 {
         width: 25% !important;
         height: 60% !important;
         font-size: 100% !important;
+    }
+
+    .mainButtons {
+        width: 75% !important;
+        font-size: 150% !important;
     }
 
     #resetPW {
