--- a/public/assets/css/reset.css
+++ b/public/assets/css/reset.css
@@ -84,13 +84,17 @@ h5 {
 	color: #5eb076 !important;
 }
 
-.fa-github-square:hover {
+.navIcon:hover {
 	color: #5eb076;
 }
 
-.fa-github-square {
+.navIcon {
 	color: white;
 	font-size: 350%;
+}
+
+.fa-github-square {
+	margin-right: 1%;
 }
 
 #newPasswordSection {
@@ -118,6 +122,26 @@ h5 {
 	float: left;
 }
 
+.buttonStuff {
+    font-size: 125%;
+}
+
 .messages {
 	color: red;
+}
+
+#emailModalLabel {
+	font-size: 200%;
+	font-family: 'Acme', sans-serif;
+}
+
+.control-label {
+	font-size: 125%;
+	font-family: 'Acme', sans-serif;
+}
+
+#note {
+	font-size: 115%;
+	text-align: center;
+	font-family: 'Acme', sans-serif;
 }
