--- a/public/assets/css/add.css
+++ b/public/assets/css/add.css
@@ -84,13 +84,17 @@ h5 {
 	color: #5eb076 !important;
 }
 
-.fa-github-square:hover {
+.navIcon:hover {
 	color: #5eb076;
 }
 
-.fa-github-square {
+.navIcon {
 	color: white;
 	font-size: 350%;
+}
+
+.fa-github-square {
+	margin-right: 1%;
 }
 
 .radios2 {
@@ -125,4 +129,20 @@ h5 {
 
 .midSection {
 	width: 35%;
+}
+
+#emailModalLabel {
+	font-size: 200%;
+	font-family: 'Acme', sans-serif;
+}
+
+.control-label {
+	font-size: 125%;
+	font-family: 'Acme', sans-serif;
+}
+
+#note {
+	font-size: 115%;
+	text-align: center;
+	font-family: 'Acme', sans-serif;
 }
