--- a/public/assets/css/edit.css
+++ b/public/assets/css/edit.css
@@ -100,13 +100,17 @@ h5 {
     margin-left: 40px;
 }
 
-.fa-github-square:hover {
+.navIcon:hover {
 	color: #5eb076;
 }
 
-.fa-github-square {
+.navIcon {
 	color: white;
 	font-size: 350%;
+}
+
+.fa-github-square {
+	margin-right: 1%;
 }
 
 #buttonSection {
@@ -115,4 +119,20 @@ h5 {
 
 .midSection {
 	width: 35%;
+}
+
+#emailModalLabel {
+	font-size: 200%;
+	font-family: 'Acme', sans-serif;
+}
+
+.control-label {
+	font-size: 125%;
+	font-family: 'Acme', sans-serif;
+}
+
+#note {
+	font-size: 115%;
+	text-align: center;
+	font-family: 'Acme', sans-serif;
 }
