--- a/public/assets/css/jobs.css
+++ b/public/assets/css/jobs.css
@@ -241,6 +241,14 @@ tr.shown td.details-control {
 	color: red;
 }
 
+.highlightGrey {
+	color: grey;
+}
+
+.highlightGreen {
+	color: darkgreen;
+}
+
 #emailModalLabel {
 	font-size: 200%;
 	font-family: 'Acme', sans-serif;
