--- a/public/assets/css/add.css
+++ b/public/assets/css/add.css
@@ -146,3 +146,58 @@ h5 {
 	text-align: center;
 	font-family: 'Acme', sans-serif;
 }
+
+
+/* For the tooltip pop-up for the Github and Email buttons at the bottom of the page*/
+.fa-envelope-square,  {
+    position: relative;
+    display: inline-block;
+}
+
+.fa-envelope-square .tooltiptext {
+	font-family: 'Acme', sans-serif;
+    visibility: hidden;
+	width: 175px;
+	font-size: 20px;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    bottom: 17%;
+    left: 51.5%;
+	margin-left: -30px;
+	margin-bottom: 2px;
+}
+
+.fa-envelope-square:hover .tooltiptext, .fa-github-square:hover .tooltiptext {
+    visibility: visible;
+}
+
+
+.fa-github-square {
+    position: relative;
+    display: inline-block;
+}
+
+.fa-github-square .tooltiptext {
+	font-family: 'Acme', sans-serif;
+    visibility: hidden;
+	width: 200px;
+	font-size: 20px;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    
+    /* Position the tooltip */
+    position: absolute;
+    z-index: 1;
+    bottom: 17%;
+    left: 50%;
+	margin-left: -220px;
+	margin-bottom: 2px;
+}
