--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -84,6 +84,26 @@ h1 {
     font-size: 125%;
 }
 
+#emailModalLabel {
+	font-size: 200%;
+	font-family: 'Acme', sans-serif;
+}
+
+.control-label {
+	font-size: 125%;
+	font-family: 'Acme', sans-serif;
+}
+
+#note {
+	font-size: 115%;
+	text-align: center;
+	font-family: 'Acme', sans-serif;
+}
+
+#emailMe {
+    margin-top: 3%;
+}
+
 
 
 
