--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -43,6 +43,26 @@
 	margin-top: 5%;
 }
 
+#emailMe {
+    margin-top: 3%;
+}
+
+#emailModalLabel {
+	font-size: 200%;
+	font-family: 'Acme', sans-serif;
+}
+
+.control-label {
+	font-size: 125%;
+	font-family: 'Acme', sans-serif;
+}
+
+#note {
+	font-size: 115%;
+	text-align: center;
+	font-family: 'Acme', sans-serif;
+}
+
 
 
 
