--- a/public/assets/css/edit.css
+++ b/public/assets/css/edit.css
@@ -137,6 +137,10 @@ h5 {
 	font-family: 'Acme', sans-serif;
 }
 
+#copyright {
+	margin-top: 9%;
+}
+
 #activeInactiveLabel {
 	font-size: 150%;
 	margin-left: 5px;
@@ -163,7 +167,7 @@ h5 {
     z-index: 1;
     bottom: 17%;
     left: 51.5%;
-	margin-left: -30px;
+	margin-left: 25px;
 	margin-bottom: 2px;
 }
 
