--- a/public/assets/css/jobs.css
+++ b/public/assets/css/jobs.css
@@ -265,6 +265,10 @@ tr.shown td.details-control {
 	font-family: 'Acme', sans-serif;
 }
 
+#copyright {
+	margin-top: 9%;
+}
+
 /* For the tooltip pop-up for the Github and Email buttons at the bottom of the page*/
 .fa-envelope-square,  {
     position: relative;
@@ -286,7 +290,7 @@ tr.shown td.details-control {
     z-index: 1;
     bottom: 17%;
     left: 51.5%;
-	margin-left: -30px;
+	margin-left: 25px;
 	margin-bottom: 2px;
 }
 
