--- a/public/assets/css/reset.css
+++ b/public/assets/css/reset.css
@@ -147,6 +147,10 @@ h5 {
 	font-family: 'Acme', sans-serif;
 }
 
+#copyright {
+	margin-top: 9%;
+}
+
 /* For the tooltip pop-up for the Github and Email buttons at the bottom of the page*/
 .fa-envelope-square,  {
     position: relative;
@@ -168,7 +172,7 @@ h5 {
     z-index: 1;
     bottom: 17%;
     left: 51.5%;
-	margin-left: -30px;
+	margin-left: 25px;
 	margin-bottom: 2px;
 }
 
