--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -164,6 +164,10 @@ hr {
 	text-align: center;
 }
 
+#copyright {
+	margin-top: 9%;
+}
+
 
 /* For the tooltip pop-up for the Github and Email buttons at the bottom of the page*/
 .fa-envelope-square,  {
@@ -186,7 +190,7 @@ hr {
     z-index: 1;
     bottom: 17%;
     left: 51.5%;
-	margin-left: -30px;
+	margin-left: 25px;
 	margin-bottom: 2px;
 }
 
