--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -63,7 +63,11 @@
 	font-family: 'Acme', sans-serif;
 }
 
-
+#copyright {
+    font-size: 150%;
+	margin-top: 3%;
+	font-family: 'Acme', sans-serif;
+}
 
 
 
