--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -13,6 +13,14 @@ h1 {
 	font-size: 350%;
 }
 
+a {
+	color: black;
+}
+
+a:hover {
+	color: green;
+}
+
 /* RESPONSIVE BACKGROUND IMAGE */
 .bgimage {
 	z-index: -100;
