--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -1,12 +1,3 @@
-a {
-	color: black;
-}
-
-a:hover {
-	color: green;
-}
-
-/* RESPONSIVE BACKGROUND IMAGE */
 .bgimage {
 	z-index: -100;
     /* Set rules to fill background */
@@ -73,8 +64,15 @@ a:hover {
 
 #copyright {
     font-size: 150%;
-	margin-top: 3%;
 	font-family: 'Acme', sans-serif;
+}
+
+#copyrightWords {
+	color: white;
+}
+
+#copyrightWords:hover {
+	color: #5eb076;
 }
 
 
