--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -17,20 +17,11 @@ h5 {
 	font-size: 100%;
 }
 
-a {
-	color: white;
-}
-
-a:hover {
-	color: #5eb076;
-}
-
 #footerNavbar {
 	background-color: green !important;
 	height: 49px;
 }
 
-/* RESPONSIVE BACKGROUND IMAGE */
 .bgimage {
 	z-index: -100;
     /* Set rules to fill background */
@@ -174,6 +165,14 @@ hr {
 
 #copyright {
 	margin-top: 9%;
+}
+
+#copyrightWords {
+	color: white;
+}
+
+#copyrightWords:hover {
+	color: #5eb076;
 }
 
 
